Update Register Shipper, Admin show delivery by shipper email;, Total order mobile app deliver

--- a/Web Client/Admin - Shipper/apollo-thymeleaf-clients/src/main/resources/templates/shipper/pages/catalog/neworder.html
+++ b/Web Client/Admin - Shipper/apollo-thymeleaf-clients/src/main/resources/templates/shipper/pages/catalog/neworder.html
@@ -20,7 +20,7 @@
             </tr>
             <tr th:each="order : ${orders}">
                 <td th:text="${order.id}"></td>
-                <td th:text="${order.address.street + ', ' + order.address.ward + ', ' + order.address.district + ', ' + order.address.city}"></td>
+                <td th:text="${order.address.street ?: 'N/A'}"></td>
                 <td th:text="${order?.variant?.product?.title ?: 'N/A'}"></td>
                 <td th:text="${order.orderDate}"></td>
                 <td class="text-end">
