--- a/Web Client/Admin - Shipper/apollo-thymeleaf-clients/src/main/resources/templates/admin/pages/users/listing/shipper.html
+++ b/Web Client/Admin - Shipper/apollo-thymeleaf-clients/src/main/resources/templates/admin/pages/users/listing/shipper.html
@@ -78,7 +78,7 @@
                              data-kt-menu="true">
                             <!--begin::Menu item-->
                             <div class="menu-item px-3">
-                                <a href="/saul-html-pro/apps/customers/view.html" class="menu-link px-3">
+                                <a th:href="@{/dashboard/users/ordersdelivery/{shipperEmail}(shipperEmail=${i.email})}" class="menu-link px-3">
                                     View
                                 </a>
                             </div>
