--- a/Web Client/Admin - Shipper/apollo-thymeleaf-clients/src/main/resources/templates/shipper/fragments/components/_sidebar.html
+++ b/Web Client/Admin - Shipper/apollo-thymeleaf-clients/src/main/resources/templates/shipper/fragments/components/_sidebar.html
@@ -69,15 +69,15 @@
             </a>
           </div>
 
-          <div class="menu-item">
-            <a class="menu-link" th:classappend="${activeView == 'shipper/pages/catalog/cancel' ? 'active' : ''}"
-               th:href="@{/shipper/cancel}">
-              <span class="menu-bullet">
-                <span class="bullet bullet-dot"></span>
-              </span>
-              <span class="menu-title">Cancel</span>
-            </a>
-          </div>
+<!--          <div class="menu-item">-->
+<!--            <a class="menu-link" th:classappend="${activeView == 'shipper/pages/catalog/cancel' ? 'active' : ''}"-->
+<!--               th:href="@{/shipper/cancel}">-->
+<!--              <span class="menu-bullet">-->
+<!--                <span class="bullet bullet-dot"></span>-->
+<!--              </span>-->
+<!--              <span class="menu-title">Cancel</span>-->
+<!--            </a>-->
+<!--          </div>-->
 
         </div>
       </div>
