--- a/Web Client/Admin - Shipper/apollo-thymeleaf-clients/src/main/resources/templates/shipper/pages/auth/login.html
+++ b/Web Client/Admin - Shipper/apollo-thymeleaf-clients/src/main/resources/templates/shipper/pages/auth/login.html
@@ -16,9 +16,19 @@
 
           <!-- Logo icon -->
           <div class="text-center mb-5">
-            <img src="/media/logos/logoshipper.png" alt="Logo" class="img-fluid" style="max-width: 300px;">
+            <img src="/media/logos/logoadmin.png" alt="Logo" class="img-fluid" style="max-width: 300px;">
           </div>
           <!-- End of logo icon -->
+
+          <!-- Thông báo thành công -->
+          <div th:if="${success}" class="alert alert-success" role="alert">
+            <p th:text="${success}"></p>
+          </div>
+
+          <!-- Thông báo lỗi -->
+          <div th:if="${error}" class="alert alert-danger" role="alert">
+            <p th:text="${error}"></p>
+          </div>
 
           <form class="form w-100 fv-plugins-bootstrap5 fv-plugins-framework" novalidate="novalidate"
                 id="kt_sign_in_form" data-kt-redirect-url="/dashboard"
@@ -46,18 +56,19 @@
 
             <div class="text-center">
               <button type="submit" id="kt_sign_in_submit" class="btn btn-lg btn-primary w-100 mb-5">
-                                    <span class="indicator-label">
-                                        Continue
-                                    </span>
-
-                <span class="indicator-progress">
-                                        Please wait... <span
-                        class="spinner-border spinner-border-sm align-middle ms-2"></span>
-                                    </span>
+                <span class="indicator-label">Continue</span>
+                <span class="indicator-progress">Please wait... <span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
               </button>
-
             </div>
+
           </form>
+
+          <!-- Liên kết đến trang đăng ký -->
+          <div class="text-center mt-4">
+            <p class="text-gray-600">Don't have an account?</p>
+            <button class="btn" onclick="redirectTo('/shipper/register?auth=true')">Register</button>
+          </div>
+
         </div>
       </div>
     </div>
@@ -65,6 +76,11 @@
 </div>
 <div th:replace="~{admin/fragments/components/_scripts}"></div>
 <script th:src="@{/js/custom/authentication.js}"></script>
+<script>
+  function redirectTo(url) {
+    window.location.href = url;
+  }
+</script>
 </body>
 
 </html>
