--- a/Web Client/Admin - Shipper/apollo-thymeleaf-clients/src/main/resources/templates/admin/pages/users/listing/admin.html
+++ b/Web Client/Admin - Shipper/apollo-thymeleaf-clients/src/main/resources/templates/admin/pages/users/listing/admin.html
@@ -31,7 +31,7 @@
                     </div>
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                             data-bs-target="#kt_modal_add_customer">
-                        Add Customer
+                        Add Admin
                     </button>
                 </div>
 
