--- a/Web Client/Admin - Shipper/apollo-thymeleaf-clients/src/main/resources/templates/shipper/pages/catalog/neworder.html
+++ b/Web Client/Admin - Shipper/apollo-thymeleaf-clients/src/main/resources/templates/shipper/pages/catalog/neworder.html
@@ -21,7 +21,7 @@
             <tr th:each="order : ${orders}">
                 <td th:text="${order.id}"></td>
                 <td th:text="${order.address.street ?: 'N/A'}"></td>
-                <td th:text="${order?.variant?.product?.title ?: 'N/A'}"></td>
+                <td th:text="${order?.variant?.name ?: 'N/A'}"></td>
                 <td th:text="${order.orderDate}"></td>
                 <td class="text-end">
                     <a th:href="@{/shipper/detail-order/{orderId}(orderId=${order.id})}">
