--- a/Web Client/Admin - Shipper/apollo-thymeleaf-clients/src/main/resources/templates/shipper/pages/details/detailcompleted.html
+++ b/Web Client/Admin - Shipper/apollo-thymeleaf-clients/src/main/resources/templates/shipper/pages/details/detailcompleted.html
@@ -199,7 +199,7 @@
                                             <td class="fw-bold text-end">
                                                 <a href="/saul-html-pro/apps/invoices/view/invoice-3.html"
                                                    class="text-gray-600 text-hover-primary">
-                                                    <span th:text="${#dates.format(orderDelivery.assignedDate, 'dd/MM/yyyy')}"></span>
+                                                    <span th:text="${orderDelivery.assignedDate != null ? #dates.format(orderDelivery.assignedDate, 'dd/MM/yyyy') : 'N/A'}"></span>
                                                 </a>
                                             </td>
                                         </tr>
@@ -219,7 +219,7 @@
                                             <td class="fw-bold text-end">
                                                 <a href="/saul-html-pro/apps/invoices/view/invoice-3.html"
                                                    class="text-gray-600 text-hover-primary">
-                                                    <span th:text="${#dates.format(orderDelivery.order.deliveryDate, 'dd/MM/yyyy')}"></span>
+                                                    <span th:text="${orderDelivery.order.deliveryDate}"></span>
                                                 </a>
                                             </td>
                                         </tr>
@@ -281,7 +281,7 @@
                                 <div class="ms-5">
                                     <a href="/saul-html-pro/apps/ecommerce/catalog/edit-product.html"
                                        class="fw-bold text-gray-600 text-hover-primary"> <span
-                                            th:text="${orderDelivery?.order?.variant?.product?.title ?: 'N/A'}"></span></a>
+                                            th:text="${orderDelivery?.order?.variant?.name ?: 'N/A'}"></span></a>
                                     <div class="fs-7 text-muted"><span
                                             th:text="${orderDelivery.order.variant.name}"></span></div>
                                 </div>
