--- a/Web Client/Admin - Shipper/apollo-thymeleaf-clients/src/main/resources/templates/admin/pages/catalog/stores/new.html
+++ b/Web Client/Admin - Shipper/apollo-thymeleaf-clients/src/main/resources/templates/admin/pages/catalog/stores/new.html
@@ -31,6 +31,9 @@
                         <input type="text" th:field="*{name}" class="form-control mb-2" placeholder="Store name" />
                         <div class="text-muted fs-7">A Store name is required and recommended to be unique.</div>
                     </div>
+                    <div th:if="${error}" class="alert alert-danger mt-3">
+                        <span th:text="${error}"></span>
+                    </div>
                     <div class="row d-flex justify-content-between">
                         <!-- Deals Image -->
                         <div class="col-lg-3 col-md-6 mb-7 me-lg-10">
@@ -216,7 +219,10 @@
                         </span>
                 </button>
             </div>
+
         </div>
+        <!-- Hiển thị lỗi chung nếu có -->
+
     </form>
 </th:block>
 <th:block th:fragment="scripts">
